manifest/objects/Apttus__DocAssemblyRule__c.object
<CustomObject>
    <description>Represents a single rule in a document assembly ruleset</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the rule is active</description>
        <inlineHelpText>Indicates whether the rule is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Category__c</fullName>
        <description>The agreement category to match.</description>
        <inlineHelpText>The agreement category to match.</inlineHelpText>
        <label>Agreement Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The description for the rule</description>
        <inlineHelpText>The description for the rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__RulesetId__c</fullName>
        <description>ID of the associated rule set</description>
        <inlineHelpText>ID of the associated rule set</inlineHelpText>
        <label>Ruleset</label>
        <referenceTo>Apttus__DocAssemblyRuleset__c</referenceTo>
        <relationshipName>SectionRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The rule evaluation sequence</description>
        <inlineHelpText>The rule evaluation sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Doc Assembly Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Assembly Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>